# ResolumeColourPicker

./: .gitignore  colour_picker.py  makefile  pyproject.toml
src/resolume_colour_picker/: __init__.py  api.py  api_settings_dialogue.py  application.py  colour_dialogue.py  config.py  layer_map_dialogue.py  settings_dialogue.py  status_heartbeat.py
src/resolume_colour_picker/data/: defaults.json
tests/: test_scene_master.py
