
[project]
name = "resolume_colour_picker"
version = "0.1.0"
description = "A colour picker that publishes changes to the resolume API"
requires-python = ">=3.10"

dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "PySide6==6.10.1",
    "PySide6_Addons==6.10.1",
    "PySide6_Essentials==6.10.1",
    "requests==2.32.5",
    "shiboken6==6.10.1",
    "urllib3==2.6.3",
    "platformdirs==4.5.1"
]
